fix overflowing outputs

--- a/index.css
+++ b/index.css
@@ -26,7 +26,8 @@
       }
 
       .container label{
-        width: 5em;
+        min-width: 5em;
+        overflow: auto;
         text-align:right;
         padding-right: .618ex;
       }
